# mobile-remote-control-interface

./: .gitignore  CLAUDE.md  README.md  config.json  pyproject.toml  start.bat
src/mrci/: __init__.py  __main__.py  app.py  constants.py  controller.py  logging_setup.py
src/mrci/config/: defaults.py  manager.py  schema.py
src/mrci/display/: aspect_ratio.py  monitor.py
src/mrci/overlay/: overlay_window.py  paginated_section.py  tile_widget.py
src/mrci/settings_gui/: color_picker.py  settings_window.py  tile_editor.py  trigger_editor.py
src/mrci/win32/: icon_extractor.py  keyboard.py  mouse_hook.py  types.py  window_enum.py  window_manager.py
tests/: conftest.py  test_logging_setup.py
tests/test_config/: test_manager.py  test_schema.py
tests/test_display/: test_aspect_ratio.py  test_monitor.py
tests/test_integration/: test_controller.py
tests/test_overlay/: test_overlay_window.py  test_paginated_section.py
tests/test_win32/: test_keyboard.py  test_window_enum.py  test_window_manager.py
tools/: install.bat  tests.bat
