[project]
name = "mrci"
version = "0.1.0"
description = "Mobile Remote Control Interface - A mobile-friendly overlay for Windows Remote Desktop"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10.2,<7.0",
]

[project.scripts]
mrci = "mrci.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrci"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Qt override methods use camelCase
"src/mrci/app.py" = ["N802"]
"src/mrci/overlay/tile_widget.py" = ["N802"]
# Win32 constant naming
"src/mrci/win32/icon_extractor.py" = ["N806"]
"src/mrci/win32/types.py" = ["N801"]
# Mock variable naming in tests
"tests/test_integration/test_controller.py" = ["N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-qt>=4.5,<5",
    "ruff>=0.15,<1",
    "mypy>=1.19,<2",
]
